Riscritto servizio cassa per gestione tavoli aperti
- Eliminato metodo helper per raggruppamento ordini
- Gestione diretta con stream in getTavoliAperti
- Rinominato endpoint per maggiore chiarezza